--- a/eaTest/eaTest.fsproj
+++ b/eaTest/eaTest.fsproj
@@ -55,11 +55,12 @@
   <ItemGroup>
     <PackageReference Include="Expecto" Version="9.0.0" />
     <PackageReference Include="Expecto.VisualStudio.TestAdapter" Version="10.0.2" />
+    <PackageReference Include="FsCheck" Version="3.0.0-alpha4" />
     <PackageReference Include="Logary" Version="5.0.0" />
-    <PackageReference Include="Logary.Adapters.Facade" Version="5.0.0-beta.26" />
+    <PackageReference Include="Logary.Adapters.Facade" Version="5.0.0" />
     <PackageReference Include="FParsec" Version="1.1.1" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.23" />
-    <PackageReference Include="Markdig" Version="0.18.3" />
+    <PackageReference Include="Markdig" Version="0.20.0" />
     <PackageReference Include="NewtonSoft.Json" Version="12.0.3" />
     <PackageReference Include="System" Version="4.1.0311.2" />
   </ItemGroup>
@@ -67,5 +68,9 @@
   <ItemGroup>
     <ProjectReference Include="..\eaLib\ealib.fsproj" />
     <ProjectReference Include="..\ea\ea.fsproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="4.7.1" />
   </ItemGroup>
 </Project>
