--- a/ealib/ealib.fsproj
+++ b/ealib/ealib.fsproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
@@ -62,8 +62,11 @@
     <PackageReference Include="Logary.Adapters.Facade" Version="5.0.0" />
     <PackageReference Include="FParsec" Version="1.1.1" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.23" />
-    <PackageReference Include="Markdig" Version="0.18.3" />
+    <PackageReference Include="Markdig" Version="0.20.0" />
     <PackageReference Include="NewtonSoft.Json" Version="12.0.3" />
     <PackageReference Include="System" Version="4.1.0311.2" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="4.7.1" />
   </ItemGroup>
 </Project>
