--- a/ealib/ealib.fsproj
+++ b/ealib/ealib.fsproj
@@ -58,6 +58,8 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Expecto" Version="9.0.0" />
+    <PackageReference Include="Expecto.VisualStudio.TestAdapter" Version="10.0.2" />
+    <PackageReference Include="FsCheck" Version="3.0.0-alpha4" />
     <PackageReference Include="Logary" Version="5.0.0" />
     <PackageReference Include="Logary.Adapters.Facade" Version="5.0.0" />
     <PackageReference Include="FParsec" Version="1.1.1" />
