--- a/foo/fooTest/fooTest.fsproj
+++ b/foo/fooTest/fooTest.fsproj
@@ -65,8 +65,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\appLib\applib.fsproj" />
-    <ProjectReference Include="..\app\app.fsproj" />
+    <ProjectReference Include="..fooLib\foolib.fsproj" />
+    <ProjectReference Include="..foo\app.fsproj" />
   </ItemGroup>
 
   <ItemGroup>
